--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
 }
 
 .text-field {
-	
+
 }
 
 .h1-style {
@@ -65,4 +65,19 @@ body {
 	opacity: 0;
 }
 
+.pig-image {
+  width: 50px;
+  height: 70px;
+  position: absolute;
+}
 
+.marvis-image {
+  width: 50px;
+  height: 70px;
+  position: absolute;
+}
+
+/*.user-pig-div {
+  width: 50px;
+  height: 70px;
+}*/
