--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,14 @@ body {
   font-family: sans-serif;
 }
 
-.header {
+.top-nav {
 	height: 100px;
 	background-color: #0000ff;
 	color: white;
 
 }
 
-.header h1 {
+.top-nav h1 {
 	margin: 0;
 	padding: 30px 0 0 0;
 }
@@ -39,7 +39,7 @@ body {
 }
 
 .text-field {
-
+ margin-right: 20px;
 }
 
 .h1-style {
