--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
 }
 
 .lane-divider {
-	border-bottom: 2px dashed yellow;
+	border-bottom: 4px dashed yellow;
 }
 
 .typing-container {
@@ -39,7 +39,7 @@ body {
 }
 
 .h1-style {
-	font: 30px bold Arial, sans-serif;
+	font: 24px bold Arial, sans-serif;
 	line-height: 1.2em;
 	margin: 20px 0 15px 0;
 }
@@ -225,4 +225,9 @@ body {
 
 .CPM {
   color: blue;
+  font-size: 80px;
+}
+
+.sentence {
+  margin: 30px 0;
 }
